# demand-forecast-explainer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  model-validation.yml
app/: copilot.py
artifacts/: metrics.json  model_median.pkl  model_q10.pkl
artifacts_backup/: feature_list.json  model_q90.pkl
src/: clean.py  features.py  inference.py  train.py
